[package]

name = "void"
version = "1.0.4"
authors = ["Jonathan Reem <jonathan.reem@gmail.com>"]
repository = "https://github.com/reem/rust-void.git"
description = "The uninhabited void type for use in statically impossible cases."
readme = "README.md"
license = "MIT / Apache-2.0"

[features]

default = ["std"]
std = []
serde = ["dep:serde"]

[dependencies]
serde = {version = "1.0.228", optional = true}
